--- a/_posts/2022-01-01-chap-3.md
+++ b/_posts/2022-01-01-chap-3.md
@@ -6,7 +6,7 @@ subtitle: "...XXXXX XX XXXX xXX."
 bigimg:
 - "/img/Wedding/wedding-background.jpg" : "Save the date"
 image: /img/Wedding/cute-1.png
-tags: [OTA, OTA firmware, firmware, esp8266, adruino, otadrive, ota drive ]
+tags: [AWeddingToRemember, NowAndAlways, HappilyEverAfter, SheSaidYes, LoveAlways, BabyJustSayYes]
 ---
 
 Cập nhật firmware là tiến trình tải firmware mới vào module thay vì sử dụng cổng Serial. 
