--- a/_posts/2022-01-01-chap-3.md
+++ b/_posts/2022-01-01-chap-3.md
@@ -5,7 +5,7 @@ meta-title: "Chapter 2: "
 subtitle: "...Nhà hát Thành Phố."
 bigimg:
 - "/img/Wedding/wedding-background.jpg" : "Save the date"
-image: /img/Wedding/cute-1.png
+image: /img/Wedding/nha_hat_1.jpg
 tags: [AWeddingToRemember, NowAndAlways, HappilyEverAfter, SheSaidYes, LoveAlways, BabyJustSayYes]
 ---
 
