Cập nhật bài viết I2C - beta

--- a/_posts/2023-07-23-I2C-LCD-STM32.md
+++ b/_posts/2023-07-23-I2C-LCD-STM32.md
@@ -13,7 +13,9 @@ category: lap-trinh-vi-dieu-khien
 # comments: true
 ---
 
-I2C kết hợp các tính năng tốt nhất của SPI và UART. Với I2C, bạn có thể kết nối nhiều slave với một master duy nhất (như SPI) và bạn có thể có nhiều master điều khiển một hoặc nhiều slave. Điều này thực sự hữu ích khi bạn muốn có nhiều hơn một vi điều khiển ghi dữ liệu vào một thẻ nhớ duy nhất hoặc hiển thị văn bản trên một màn hình LCD.
+I2C kết hợp các tính năng tốt nhất của SPI và UART. Với I2C, bạn có thể kết nối nhiều slave với một master duy nhất (như SPI) và bạn có thể có nhiều master điều khiển một hoặc nhiều slave. 
+
+Điều này thực sự hữu ích khi bạn muốn có nhiều hơn một vi điều khiển ghi dữ liệu vào một thẻ nhớ duy nhất hoặc hiển thị văn bản trên một màn hình LCD, hoặc điều khiển đồng thời nhiều màn hình LCD.
 
 ### **Giới thiệu giao tiếp I2C?**
 
@@ -41,22 +43,20 @@ Thông điệp cũng bao gồm **điều kiện khởi động** và **điều k
 
 **Các bước truyền dữ liệu I2C**
 
-1. Master gửi điều kiện khởi động đến mọi slave được kết nối bằng cách chuyển đường SDA từ mức điện áp cao sang mức điện áp thấp trước khi chuyển đường SCL từ mức cao xuống mức thấp.
-2. Master gửi cho mỗi slave địa chỉ 7 hoặc 10 bit của slave mà nó muốn giao tiếp, cùng với bit đọc / ghi.
-3. Mỗi slave sẽ so sánh địa chỉ được gửi từ master với địa chỉ của chính nó. Nếu địa chỉ trùng khớp, slave sẽ trả về một bit ACK bằng cách kéo dòng SDA xuống thấp cho một bit. Nếu địa chỉ từ master không khớp với địa chỉ của slave, slave rời khỏi đường SDA cao.
+1. **Master gửi điều kiện khởi động** đến mọi slave được kết nối.
+2. **Master gửi** cho mỗi slave **địa chỉ 7 bit** hoặc 10 bit **của slave mà nó muốn giao tiếp**, **cùng với bit đọc / ghi**.
+3. Mỗi slave sẽ so sánh địa chỉ được gửi từ master với địa chỉ của chính nó. 
+	- **Nếu địa chỉ trùng khớp**, **slave sẽ trả về một bit ACK** bằng cách kéo dòng SDA xuống thấp cho một bit. 
+	- **Nếu địa chỉ từ master không khớp** với địa chỉ của slave, **slave rời khỏi đường SDA cao**.
 4. Master gửi hoặc nhận khung dữ liệu.
 5. Sau khi mỗi khung dữ liệu được chuyển, thiết bị nhận trả về một bit ACK khác cho thiết bị gửi để xác nhận đã nhận thành công khung.
-6. Để dừng truyền dữ liệu, master gửi điều kiện dừng đến slave bằng cách chuyển đổi mức cao SCL trước khi chuyển mức cao SDA.
+6. Để dừng truyền dữ liệu, **master gửi điều kiện dừng đến slave** bằng cách **chuyển đổi mức cao SCL trước khi chuyển mức cao SDA**.
 
-Mỗi lần giao tiếp có cấu trúc như sau:
-
-![Untitled](/img/2023-07-23-I2C-LCD-STM32/i2c-cau-truc.jpg)
-
-#### **Start condition( Điều khiện bắt đầu)**
+#### **Start condition (Điều khiện bắt đầu)**
 
 Bất cứ khi nào một thiết bị chủ / IC quyết định bắt đầu một giao dịch, nó sẽ **chuyển mạch SDA từ mức điện áp cao xuống mức điện áp thấp** sau đó **đường SCL chuyển từ cao xuống thấp**.
 
-Khi điều kiện bắt đầu được gửi bởi thiết bị Master, tất cả các thiết bị Slave đều hoạt động ngay cả khi chúng ở chế độ ngủ (sleep mode) và đợi bit địa chỉ.
+> **Khi điều kiện bắt đầu được gửi** bởi thiết bị Master, tất cả các thiết bị **Slave đều hoạt động** ngay cả khi chúng **ở chế độ ngủ (sleep mode) và đợi bit địa chỉ**.
 
 <div class="post-img-post">
     <img src="/img/2023-07-23-I2C-LCD-STM32/i2c-start.jpg">
@@ -76,7 +76,7 @@ ACK / NACK là viết tắt của Acknowledged/Not-Acknowledged. Nếu địa ch
 
 Nó bao gồm 8 bit và chúng được thiết lập bởi bên gửi, với các bit dữ liệu cần truyền tới bên nhận. Khối này được theo sau bởi một bit ACK / NACK và được set thành ‘0’ bởi bên nhận nếu nó nhận thành công dữ liệu. Ngược lại, nó vẫn ở mức logic ‘1’.
 
-Sự kết hợp của khối dữ liệu theo sau bởi bit ACK / NACK được lặp lại cho đến quá trình truyền dữ liệu được hoàn tất.
+> Sự kết hợp của khối dữ liệu theo sau bởi bit ACK / NACK được lặp lại cho đến quá trình truyền dữ liệu được hoàn tất.
 
 #### **Stop condition (Điều kiện kết thúc)**
 
@@ -106,9 +106,12 @@ Stop condition
 </a>
 
 #### **Sơ đồ khối I2C của STM32F4**
+
 • `SCL` - Serial Clock Line: Tạo xung nhịp đồng hồ do thiết bị Master phát ra.
+
 • `SDA` – Serial Data Line: Đường truyền nhận dữ liệu.
-Chip STM32F4 hỗ trợ cho chúng ta **3 bộ I2C,** lần lượt là **I2C1, I2C2, I2C3** tương ứng với các chân:
+
+Chip **STM32F4** hỗ trợ cho chúng ta **3 bộ I2C,** lần lượt là **I2C1, I2C2, I2C3** tương ứng với các chân:
 
 ![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 3.png)
 
@@ -120,9 +123,9 @@ Chip STM32F4 hỗ trợ cho chúng ta **3 bộ I2C,** lần lượt là **I2C1, 
 
 Lập trình **Master** hoặc **Slave** ở **STM32F4**:
 
-- Nếu cấu hình Master: Có thể tạo xung clock và tạo tín hiệu start, stop.
+- Nếu cấu hình **Master**: Có thể tạo xung clock và tạo tín hiệu start, stop.
 
-- Nếu cấu hình Slave: Lập trình địa chỉ thiết bị I2C, chế độ kiểm tra stop bit.
+- Nếu cấu hình **Slave**: Lập trình địa chỉ thiết bị I2C, chế độ kiểm tra stop bit.
 
 - Hỗ trợ 2 chuẩn tốc độ 100khz và 400khz.
 
@@ -136,11 +139,15 @@ Lập trình **Master** hoặc **Slave** ở **STM32F4**:
 
 ![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 5.png)
 
-Từ sơ đồ nguyên lý, sử dụng I2C từ **STM32F4** truyền **8 bit** theo cấu trúc bit như sau:
+Từ sơ đồ nguyên lý trên, **STM32F4XX làm Master** sẽ phát tín hiệu **truyền dữ liệu** qua **Bus I2C** đến IC **PCF8574 làm thiết bị Slave**, với output của IC PCF8574 **ngõ ra 8 bit** từ **P7 → P0**, các ngõ ra này sẽ kết nối với các chân điều khiển trên màn hình LCD như sau (kết nối theo **chuẩn 4-bit** của LCD1602 hoặc LCD2004):
+
+##### 4-bit data
 
 | P7 | P6 | P5 | P4 |
 | --- | --- | --- | --- |
 | D7 | D6 | D5 | D4 |
+
+##### 4-bit điều khiển (chân output P3 không sử dụng)
 
 | P3 | P2 | P1 | P0 |
 | --- | --- | --- | --- |
@@ -488,7 +495,7 @@ Dòng lệnh thứ 2:
 
 Ta sắp xếp chuỗi data thành mã hex như sau:
 
-| BIT 7 | BIT 6 | BIT 5 | BIT 4 |
+| BIT 3 | BIT 2 | BIT 1 | BIT 0 |
 | --- | --- | --- | --- |
 | D7 | D6 | D5 | D4 |
 | 1 (N) | 0 (F) | 0 | 0 |
@@ -735,13 +742,13 @@ Vì vậy địa chỉ sẽ là `0x80`, vì vậy đối với DDRAM, tất cả
 
 **Nên tôi có cú pháp công thức như sau:**
 
-| 15 | Set DDRAM address or coursor position on display | 0x80 + address* |
-| --- | --- | --- |
-| 16 | Set CGRAM address or set pointer to CGRAM location | 0x40 + address** |
+| Set DDRAM address or coursor position on display | 0x80 + address* |
+| --- | --- |
+| Set CGRAM address or set pointer to CGRAM location | 0x40 + address* |
 
-Ví dụ hiển thị “OK” tại cột 3 hàng 1 có địa chỉ là 0x02
+Ví dụ hiển thị “**OK**” tại cột 3 hàng 1 có địa chỉ là 0x02
 
-<a href="/img/2023-07-23-I2C-LCD-STM32/Untitled 38.png" data-lightbox="roadtrip" data-title="My caption">
+<a href="/img/2023-07-23-I2C-LCD-STM32/Untitled 38.png" data-lightbox="roadtrip" data-title=" ">
 	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32/Untitled 38.png" alt="image-1"/>
 </a>
 
@@ -749,19 +756,29 @@ Ví dụ hiển thị “OK” tại cột 3 hàng 1 có địa chỉ là 0x02
 Tương ứng với `lcd_send_cmd (0x80 + 0x02);` → `lcd_send_cmd (0x82);`
 
 ```c
-lcd_send_cmd (0x82);
-lcd_send_string("OK");
+lcd_send_cmd (0x82); // tương ứng vị trí thứ 3, của dòng đầu tiên
+lcd_send_string("OK"); // OK sẽ chiếm 2 vị trí ô nhớ trên màn hình
 HAL_Delay(1000);
 ```
 
 ![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 39.png)
 
-Nên **địa chỉ ghi dữ liệu** lên có giá trị `hex` như bảng dưới:
+Nên **địa chỉ ghi dữ liệu** khi sử dụng lệnh `cmd` có giá trị `hex` như bảng dưới:
 
-![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 40.png)
+<a href="/img/2023-07-23-I2C-LCD-STM32/Untitled 40.png" data-lightbox="dia chi DDRAM" data-title="Địa chỉ DDRAM khi thực hiện lệnh cmd">
+	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32/Untitled 40.png" alt="image-1"/>
+</a>
+
 
 Cuối cùng, ta sẽ có hàm để đưa tới vị trí cần hiển thị như sau:
 
+Trong lập trình, tôi đặt **vị trí bắt đầu là 0**
+- Tương ứng với **hàng đầu tiên** thì `row = 0`
+- Tương ứng với **hàng tiếp theo** thì `row = 1`
+- ...
+- Ví trí của cột `col = col + 0x80` (địa chỉ base của hàng đầu tiên)
+- Ví trí của cột `col = col + 0xC0` (địa chỉ base của hàng tiếp theo)
+- ...
 ```c
 void lcd_put_cur(int row, int col)
 {
